--- a/Homework2/Style.css
+++ b/Homework2/Style.css
@@ -9,7 +9,7 @@ body {
     max-height: 600px;
 }
 
-.ingpic{
+.ingpic {
     height: auto;
     width: auto;
     max-width: 200px;
@@ -42,5 +42,14 @@ h1 {
 
 li, p {
  font-size: 24px;
+
+}
+
+nav {
+    font-size: 64px;
+    color: blue;
+    text-decoration: underline;
+    text-transform: uppercase;
+
 
 }
