--- a/Homework3/styles-parta.css
+++ b/Homework3/styles-parta.css
@@ -6,12 +6,11 @@ body {
 
 html {
   font-family: 'Helvetica neue', Arial, 'sans serif';
-  font-size: 20px;
+  font-size: 10px;
   background-color: #ccc;
 }
 
 /* Selectors to be matched up with rulesets */
-
 .card article img
 .card footer
 .card header
@@ -19,26 +18,58 @@ html {
 
 /* Rulesets to be matched up with selectors */
 
-{
+.card {
   width: 35em;
   height: 22em;
   margin: 5em auto;
-  background-colour: red;
+  background-color: red;
   border: 0.2em solid black;
   border-radius: 1.5em;
 }
 
-{
+.card header{
   background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
   border-radius: 1.5em 1.5em 0 0;
 }
 
-{
+.card footer{
   background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
   border-radius: 0 0 1.5em 1.5em;
 }
 
-{
-  max-height: 100%
+.card article img{
+  max-height: 100%;
   float: right;
+}
+
+.card article{
+    height: 12em;
+    background:rgba(0,0,0,0.2);
+
+}
+
+.card header, .card footer {
+    padding: 1em;
+    height: 3em;
+
+
+}
+
+h2, p{
+    margin: 0em;
+}
+
+h2{
+    font-size: 2em;
+    line-height: 1.5em;
+}
+
+footer p {
+font-size: 1.5em;
+line-height: 2em;
+
+}
+article p{
+    padding-left: 1em
+
 }
