A very nice box finished
The validator didn't yelly about the gradient, but I honestly oculdn't tell a difference with/without it

--- a/Homework3/styles-partb.css
+++ b/Homework3/styles-partb.css
@@ -3,3 +3,22 @@ html {
 }
 
 /* Your CSS below here */
+
+p {
+    width: 200px;
+    height: 60px;
+    background-color: red;
+    line-height: 60px;
+    text-align: center;
+    font-size: 1.125rem;
+    color: red;
+    text-shadow: 2px 2px #000000;
+    border-radius: 4px;
+    border-color: #c43540;
+    border-width: 1px;
+    border-style: solid;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(255, 0, 0, 0.2) 30%);
+    box-shadow: 0px 0px, inset 1px 1px rgba(255, 255, 255, 0.8), inset -1px -1px rgba(0, 0, 0, 0.8);
+
+
+}
