--- a/Homework4/style.css
+++ b/Homework4/style.css
@@ -14,11 +14,26 @@ body {
 }
 
 .navlink {
-    background-color: tomato;
     text-align: center;
     font-size: 30px;
     font-weight: bold;
     word-wrap: break-word;
+}
+
+nav a {
+    width: 200px;
+    height: 60px;
+    background-color: red;
+    line-height: 50px;
+    text-align: center;
+    text-shadow: 2px 2px #000000;
+    border-radius: 4px;
+    border-color: #c43540;
+    border-width: 1px;
+    border-style: solid;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(255, 0, 0, 0.2) 30%);
+    box-shadow: 0px 0px, inset 1px 1px rgba(255, 255, 255, 0.8), inset -1px -1px rgba(0, 0, 0, 0.8);
+    padding: 5px;
 }
 
 .main {
@@ -75,7 +90,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-color: green;
+    background-color: #0be897;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 18px;
