--- a/Homework4/style.css
+++ b/Homework4/style.css
@@ -17,23 +17,7 @@ body {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
-    word-wrap: break-word;
-}
-
-nav a {
-    width: 200px;
-    height: 60px;
-    background-color: red;
-    line-height: 50px;
-    text-align: center;
-    text-shadow: 2px 2px #000000;
-    border-radius: 4px;
-    border-color: #c43540;
-    border-width: 1px;
-    border-style: solid;
-    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(255, 0, 0, 0.2) 30%);
-    box-shadow: 0px 0px, inset 1px 1px rgba(255, 255, 255, 0.8), inset -1px -1px rgba(0, 0, 0, 0.8);
-    padding: 5px;
+    word-wrap: normal;
 }
 
 .main {
@@ -124,4 +108,20 @@ legend {}
 p {
     font-size: 18px;
     margin: 10px;
+}
+
+nav a {
+    width: 200px;
+    height: 60px;
+    background-color: red;
+    line-height: 50px;
+    text-align: center;
+    text-shadow: 2px 2px #000000;
+    border-radius: 4px;
+    border-color: #c43540;
+    border-width: 1px;
+    border-style: solid;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(255, 0, 0, 0.2) 30%);
+    box-shadow: 0px 0px, inset 1px 1px rgba(255, 255, 255, 0.8), inset -1px -1px rgba(0, 0, 0, 0.8);
+    padding: 5px;
 }
